@@ -1,5 +1,9 @@
 2011-07-28  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
+	* honor fonts in configuration record
+
+2011-07-28  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
 	* configuration dialog layout finished, no effects yet
 
 2011-07-23  Hendrik Tews  <tews@os.inf.tu-dresden.de>
